<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SingleExpenseActivity"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">
    <TextView
        android:id="@+id/tvSingleExpenseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refuel"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginTop="28dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.16"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/label_total_spent"
                android:textAllCaps="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_semibold"/>
                <TextView
                    android:id="@+id/tvSingleExpenseTotalSpent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_spent"
                    android:textSize="32sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="56dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.16"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:text="@string/label_data1"/>
            <TextView
                android:id="@+id/tvSingleExpenseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:textSize="32sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSingleExpensePricePerLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:text="@string/label_price_per_liter"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvSingleExpensePricePerLiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_price_per_liter"
                android:textSize="32sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_per_liter"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_semibold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSingleExpenseKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:text="@string/label_total_km1"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvSingleExpenseKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_km"
                android:textSize="32sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_semibold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSingleExpenseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:text="@string/label_insurance_year"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tvSingleExpenseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2022"
            android:textSize="32sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSingleExpenseDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:text="@string/label_optional_description"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tvSingleExpenseDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_description"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_edit"
        android:textColor="@color/white"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        app:cornerRadius="100dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_label"
        android:backgroundTint="@color/red"
        android:layout_marginTop="10dp"
        app:cornerRadius="100dp"
        android:padding="16dp"
        />
</LinearLayout>