<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvWelcomeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.28"
                android:text="@string/label_welcome_home"
                android:textAllCaps="true"
                android:textColor="@color/lightgray"
                android:textSize="11sp" />
            <TextView
                android:id="@+id/tvCarName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/label_car_name"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="24sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_gravity="end"
            android:contentDescription="@string/welcome_user"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_total_spent_home"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/lightgray"
        android:letterSpacing="0.16"
        android:textSize="12sp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/euro"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sample_spent"
            android:textSize="32sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/sample_percent"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.16"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/label_emitted_home"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_emitted"
                    android:textSize="32sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_semibold"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="56dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.16"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/label_avg_consumption"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_consumption_home"
                    android:textSize="32sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_100km"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_semibold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:visibility="visible"
        android:id="@+id/homePieChart"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:visibility="gone"
        android:id="@+id/homeLineChart"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnDistribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/gray_bg"
            android:drawableStart="@drawable/ic_ant_design_home_outlined"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/distribution"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:letterSpacing="0.02"
            android:stateListAnimator="@null"
            app:icon="@drawable/ic_ant_design_home_outlined"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/btnTrend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trend"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_marginStart="6dp"
            android:backgroundTint="@color/white"
            android:stateListAnimator="@null"
            android:letterSpacing="0.02"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/lightgray"
            app:icon="@drawable/ic_ant_design_line_chart_outlined"
            app:iconTint="@color/black"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvLastExpenses"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>