<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRefuelActivity"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_add_refuel"
        android:textSize="28sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_price_per_liter"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/lightgray"
        android:letterSpacing="0.16"
        android:textSize="12sp"
        android:layout_marginTop="22dp"/>

    <EditText
        android:id="@+id/etRefPricePerLiter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_price_per_liter"
        android:inputType="numberDecimal"
        android:paddingStart="24dp"
        android:paddingEnd="4dp"
        android:autofillHints=""
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_total_spent"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/lightgray"
        android:letterSpacing="0.16"
        android:textSize="12sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etRefTotalSpent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_total_spent"
        android:inputType="numberDecimal"
        android:paddingStart="24dp"
        android:paddingEnd="4dp"
        android:autofillHints=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/lightgray"
        android:letterSpacing="0.16"
        android:textSize="12sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etRefDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/etInsDate"
        android:inputType="date"
        android:paddingStart="24dp"
        android:paddingEnd="4dp"
        android:autofillHints=""
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_total_km"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/lightgray"
        android:letterSpacing="0.16"
        android:textSize="12sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etRefTotalKm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_km"
        android:inputType="number"
        android:paddingStart="24dp"
        android:paddingEnd="4dp"
        android:autofillHints=""
        />

    <Button
        android:id="@+id/btnRefRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/btn_registra"
        app:cornerRadius="100dp"
        android:layout_marginTop="42dp"/>
</LinearLayout>